# libpainter

./: .travis.yml  Makefile.am  configure.ac
src/: Makefile.am  painter.c  painter_utils.c
tests/: Makefile.am  paintertest.c
